Created HTML_5 and linked CSS_2

--- a/Basic_HTML_and_CSS/Basic_CSS_2.css
+++ b/Basic_HTML_and_CSS/Basic_CSS_2.css
@@ -1,6 +1,19 @@
 p {
     color:navy;
-    background-color: dimgray;
+    background-color: lightgrey;
     font-size: 150%;
     text-align: center;
+}
+
+h2 {
+    text-shadow: 2px 2px 10px;
+    text-align: center;
+}
+
+ol {
+    list-style-type: lower-greek;
+}
+
+ul {
+    list-style-type: square;
 }
