--- a/Affecting-images-with-CSS/css/photo_style.css
+++ b/Affecting-images-with-CSS/css/photo_style.css
@@ -1,7 +1,6 @@
 /* ---------------------------------------------
         GALLERY SECTION ANIMATION               
 --------------------------------------------- */
-
 p {
     font-weight: 300;
     line-height: 30px;
@@ -23,14 +22,14 @@ p {
 .photo-container {
     text-align: center;
     margin: 15px auto;
-    width: 300px;
-    height: 169 px;
+    width: 600px;
+    height: 450px;
 }
 
 .photo-container img {
     max-width: 100%;
-    width: 300px;
-    height: 169px;
+    width: 600px;
+    height: 450px;
 }
 
 .photo-overlay {
@@ -49,7 +48,37 @@ p {
 
 .white-head {
     color: #c9bdaa;
-    margin-top: 5%;
+    margin-top: 10%;
     line-height: 30px;
     padding-bottom: 20px;
+}
+
+/* ---------------------------------------------
+        PHOTO OVERLAY TRANSITIONS             
+--------------------------------------------- */
+
+.photo-overlay {
+    opacity: 0;
+    transition: opacity .1s;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.photo-overlay p {
+    width: 100%;
+    height: 100;
+    color: #fff;
+}
+
+.photo-overlay:hover {
+    opacity: 1;
+}
+
+.photo img {
+    transition: transform .5s;
+    transform-origin: 50% 50%;
+}
+
+.photo:hover img {
+    transform: scale(1.1);
 }
