--- a/Basic_HTML_and_CSS/Website_1_project/css/animations.css
+++ b/Basic_HTML_and_CSS/Website_1_project/css/animations.css
@@ -6,7 +6,7 @@
     color: #f00;
     font: bold 12px/18px sans-serif;
     text-align: center;
-    display: inlien;
+    display: inline;
     margin: 0% auto;
     padding: 0;
     list-style: none;
