--- a/portfolio_website/stylesheet/portfolio_css.css
+++ b/portfolio_website/stylesheet/portfolio_css.css
@@ -7,14 +7,33 @@ body {
 
 /* Image elements */
 img {
-    filter: grayscale(75%); /* This rids our pictures of 75% of their color */
+    filter: grayscale(1); /* This rids our pictures of 75% of their color */
     border-radius: 8px; /* Gives all images slightly rounded corners */
     max-width: 100%; /* Ensures all images stay within the width of their container */
     height: 340px; /* Sets the height of all images */
     display: block; /* By specifying block display we can ensure our images are able to be centered */
     margin-left: auto; /* In combination with "margin-right: auto" this centers all images */
     margin-right: auto;
+    transition: 0.1s;
+    box-shadow: 5px 5px 5px #222;
 }
+
+img:hover {
+    filter: grayscale(0);
+    scale: 1.1;
+    transition: 0.2s;
+    box-shadow: none;
+}
+
+/* The @media rule is used in media queries to apply different styles for different media/types of devices */
+/* On screens 576px and smaller the images will be 100px tall and centered vertically in the column */
+@media screen and (max-width: 576px) {
+    img {
+        height: 100px;
+        margin-top: 150px;
+    }
+}
+
 
 iframe {
     display: block;
@@ -180,6 +199,13 @@ footer {
     overflow: hidden;
 }
 
+/* Screens 576px and smaller will display a scroll bar if the text overflows the column height */
+@media screen and (max-width: 576px) {
+    .Column_1 {
+        overflow: auto;
+    }
+}
+
 
 .Column_2 {
     float: left;
@@ -214,20 +240,9 @@ footer {
 .GH_logo:hover {
     transition: 0.4s;
     filter: invert(.9);
+    scale: 1; /*override scaling of images. Doesn't look good with inverted colors*/
 }
 
-#personal_image {
-    filter: grayscale(1);
-    transition: 0.1s;
-    box-shadow: 5px 5px 5px #222;
-}
-
-#personal_image:hover {
-    filter: grayscale(0);
-    scale: 1.1;
-    transition: 0.2s;
-    box-shadow: none;
-}
 
 
 /* ---------------------------------------------
