--- a/Basic_HTML_and_CSS/One-Page Website/css/one_page_website.css
+++ b/Basic_HTML_and_CSS/One-Page Website/css/one_page_website.css
@@ -16,7 +16,7 @@ body {
 
 * {
     box-sizing: border-box;
-  }
+}
 
 /* ---------------------------------------------
         TOP MENU BAR              
@@ -181,6 +181,12 @@ h2::after { /*This is the underline*/
     cursor: pointer;
   }
 
+.column {
+    float: left;
+    width: 25%;
+}
+  
+
 /* ---------------------------------------------
         VIDEO          
 --------------------------------------------- */
@@ -298,7 +304,7 @@ footer {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 20px;
     left: 0;
     top: 0;
     width: 100%;
@@ -313,8 +319,8 @@ footer {
     background-color: #fefefe;
     margin: auto;
     padding: 0;
-    width: 90%;
     max-width: 1200px;
+    max-height: 70%;
   }
   
   /* The Close Button */
@@ -380,10 +386,12 @@ footer {
     position: absolute;
     top: 0;
   }
-  
-  img {
+
+.mySlides img {
     margin-bottom: -4px;
-  }
+    max-width: 100%;
+    height: auto;
+}
   
   .caption-container {
     text-align: center;
